--- a/MirrosBroSlug.CSharp.csproj
+++ b/MirrosBroSlug.CSharp.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Assets\scripts\BulletCollision.cs" />
     <Compile Include="Assets\scripts\Enemy.cs" />
     <Compile Include="Assets\scripts\Hero.cs" />
+    <Compile Include="Assets\scripts\Parallaxing.cs" />
+    <Compile Include="Assets\scripts\SmoothCamera.cs" />
     <Compile Include="Assets\scripts\Weapon.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
